--- a/wp-content/themes/dermer/css/scss/_variables.scss
+++ b/wp-content/themes/dermer/css/scss/_variables.scss
@@ -1,3 +1,21 @@
-$themePath: '/wp-content/themes/theme-name/';
+$themePath: '/wp-content/themes/dermer/';
 
-// background: url('#{$themePath}img/') 0 0 repeat;
+// fonts
+
+$montserrat: 'Montserrat', sans-serif;
+
+// regular 400, bold 700, extrabold 800
+
+$playfair: 'Playfair Display', serif;
+
+// regular 400, bold 700 bold italic 700i
+
+$prata: 'Prata', serif;
+
+
+// colors
+
+
+$bluelight: #1e94ff;
+$blue: #192d50;
+$beige: #e8cab2;
