--- a/wp-content/themes/dermer/css/scss/style.scss
+++ b/wp-content/themes/dermer/css/scss/style.scss
@@ -8,6 +8,7 @@
 				"reset",
 				"global",
 				"header",
-				"homepage/section_one";
+				"homepage/section_one",
+				"homepage/section_two";
 
 
