--- a/wp-content/themes/dermer/css/scss/homepage/section_one.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/section_one.scss
@@ -42,6 +42,9 @@ span.section_one_large_header {
 	font-family:$playfair;
 	font-weight:700;
 	max-width: 880px;
+	br {
+		display: none;
+	}
 }
 
 a.button {
@@ -71,13 +74,177 @@ a.button {
 }
 
 
+@media screen and (max-width: 1450px) {
+	
+	
+	#section_one {
+		background-position: top right;
+	}
+	
+	
+	.section_one_inner {
+		padding: 192px 125px 0;
+	}
+	
+	
+	span.section_one_large_header {
+		font-size:90px;
+		line-height: 108px;
+		margin: 17px 0 0;
+	}
+	
+	a.button {
+		margin: 42px 0 0;
+	}
+	
+	.arrow {
+   	margin: 80px 0 0;
+	}
+	
+	
+} /* Media Query */
+
+
 @media screen and (max-width: 1250px) {
 	
 	
 #section_one {
   margin: 100px 0 0;
+  height:783px;
+  
 }
 
+
+.section_one_inner {
+  padding: 274px 72px 0;
+  
+}
+
+span.section_one_title {
+	&:before {
+		display: none;
+	}
+	&:after {
+		content:"";
+		width:54px;
+		height:5px;
+		background: $beige;
+		display: block;
+		vertical-align: top;
+		margin-top:26px;
+		margin-right:27px;
+	}
+}
+
+
+span.section_one_large_header {
+	font-size:70px;
+	line-height: 81px;
+	max-width: 610px;
+}
+
+
+.arrow {
+	display: none;
+}
+
+	
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 900px) {
+	
+	
+	#section_one {
+		background: url(#{$themePath}images/hero-768.jpg) top center no-repeat;
+	}
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 767px) {
+	
+	
+	#section_one {
+		margin: 115px 0 0;
+		height: 503px;
+		background: url(#{$themePath}images/hero-414.jpg) top center;
+		position: relative;
+	}
+	
+	.section_one_inner {
+    padding: 0px 0px 0;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 117px;
+    left:0;
+	}
+	
+	
+	span.section_one_title {
+		font-size:15px;
+		
+		&:after {
+			display: block;
+			margin: 20px auto 0;
+		}
+	}
+	
+	span.section_one_large_header {
+		font-size:46px;
+		line-height: 54px;
+		padding:0 10px;
+		max-width: 510px;
+		margin: 19px auto 0;
+	}
+	
+	a.button {
+		position: absolute;
+		bottom: -118px;
+		width:100%;
+		left:0;
+		padding-left:0;
+		padding-right:0;
+	}
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 399px) {
+	
+	
+	.section_one_inner {
+		bottom: 108px;
+	}
+	
+	
+	span.section_one_title {
+		max-width: 300px;
+		line-height: 18px;
+	}
+	
+	
+	span.section_one_large_header {
+    font-size: 38px;
+    line-height: 43px;
+    br {
+	    display: inline-block;
+    }
+   }
+	
+	a.button {
+		font-size: 13px;
+		bottom: -108px;
+	}
+	
 	
 	
 	
