--- a/wp-content/themes/dermer/css/scss/homepage/section_one.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/section_one.scss
@@ -148,6 +148,13 @@ span.section_one_large_header {
 	display: none;
 }
 
+a.button {
+	&:hover {
+		background: $bluelight;
+		color:#fff;
+	}
+}
+
 	
 	
 	
@@ -200,7 +207,7 @@ span.section_one_large_header {
 		font-size:46px;
 		line-height: 54px;
 		padding:0 10px;
-		max-width: 510px;
+		max-width: 330px;
 		margin: 19px auto 0;
 	}
 	
