--- a/wp-content/themes/dermer/css/scss/style.scss
+++ b/wp-content/themes/dermer/css/scss/style.scss
@@ -9,6 +9,7 @@
 				"global",
 				"header",
 				"homepage/section_one",
-				"homepage/section_two";
+				"homepage/section_two",
+				"homepage/section_three";
 
 
