--- a/wp-content/themes/dermer/css/scss/homepage/section_two.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/section_two.scss
@@ -1,13 +1,13 @@
 #section_two {
 	width:100%;
-	height:3000px;
 	background: url(#{$themePath}images/pattern-white.jpg) top center repeat;
+	padding-bottom:270px;
 }
 
 .sec_two_inner {
 	max-width:1690px;
 	margin:0 auto;
-	padding:190px 0 0;
+	padding:185px 0 0;
 }
 
 
@@ -22,6 +22,7 @@
 	width:31.9%;
 	padding:130px 0 0 0;
 	height:570px;
+	position: relative;
 	span.small_header {
 		color:$bluelight;
 		text-transform: uppercase;
@@ -42,6 +43,40 @@
 .single_slide_inner {
 	max-width:355px;
 	margin:0 auto;
+	position: relative;
+	z-index:1;
+}
+
+.slide_svg {
+	position: absolute;
+	
+	left:0;
+	width:100%;
+	.slide_svg_inner {
+		svg {
+			width:100%;
+		}
+	}
+}
+
+
+.single_slide.slide_one {
+	.slide_svg {
+		bottom:0;
+	}
+}
+
+.single_slide.slide_two {
+	margin-top:-80px;
+	.slide_svg {
+		top:0;
+	}
+}
+
+.single_slide.slide_three {
+	.slide_svg {
+		bottom:0;
+	}
 }
 
 
