--- a/wp-content/themes/dermer/css/scss/_global.scss
+++ b/wp-content/themes/dermer/css/scss/_global.scss
@@ -1,3 +1,8 @@
+body {
+	color:$blue;
+}
+
+
 .alignleft,
 img.alignleft {
 	display: inline;
@@ -25,6 +30,25 @@ img.aligncenter {
 	margin-bottom: 12px;
 	max-width:100%;
 	height:auto;
+}
+
+
+.content {
+	h2 {
+		color:$bluelight;
+		font-size: 24px;
+		line-height: 38px;
+		font-family: $montserrat;
+		font-weight:700;
+	}
+	p {
+		color:$blue;
+		font-size: 16px;
+		line-height: 32px;
+		font-family: $montserrat;
+		font-weight: 400;
+		margin-bottom:62px;
+	}
 }
 
 
