--- a/wp-content/themes/dermer/css/scss/_global.scss
+++ b/wp-content/themes/dermer/css/scss/_global.scss
@@ -40,6 +40,7 @@ img.aligncenter {
 		line-height: 38px;
 		font-family: $montserrat;
 		font-weight:700;
+		padding-bottom:9px;
 	}
 	p {
 		color:$blue;
@@ -47,7 +48,7 @@ img.aligncenter {
 		line-height: 32px;
 		font-family: $montserrat;
 		font-weight: 400;
-		margin-bottom:62px;
+		margin-bottom:44px;
 	}
 }
 
