--- a/wp-content/themes/dermer/css/scss/header.scss
+++ b/wp-content/themes/dermer/css/scss/header.scss
@@ -7,7 +7,10 @@ header {
 	left:0;
 	background: #fff;
 	z-index:25;
+	box-shadow: 0px 7px 8px 0px rgba(0, 0, 0, 0.11);
 }
+
+
 
 .header_left {
 	width:690px;
