--- a/wp-content/themes/dermer/css/scss/homepage/section_three.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/section_three.scss
@@ -1,5 +1,7 @@
 #section_three {
 	margin:-143px 0 130px;
+	padding-left:75px;
+	padding-right:75px;
 }
 
 
@@ -50,3 +52,24 @@
 	column-count:2;
 	column-gap:105px;
 }
+
+
+@media screen and (max-width: 1450px) {
+	
+	
+	
+	#section_three {
+		margin: -143px 0 50px;
+	}
+	
+	.sec_three_content {
+		 max-width: 1130px;
+		 column-gap: 76px;
+		 margin: 82px auto 0;
+	}
+	   
+	
+	
+	
+	
+} /* Media Query */
