--- a/wp-content/themes/dermer/css/scss/style.scss
+++ b/wp-content/themes/dermer/css/scss/style.scss
@@ -7,6 +7,7 @@
 @import "variables",
 				"reset",
 				"global",
+				"slick",
 				"header",
 				"homepage/section_one",
 				"homepage/section_two",
