--- a/wp-content/themes/dermer/css/scss/_global.scss
+++ b/wp-content/themes/dermer/css/scss/_global.scss
@@ -53,6 +53,18 @@ img.aligncenter {
 }
 
 
+@media screen and (max-width: 1135px) {
+	
+	.content {
+		p {
+			margin-bottom: 34px;
+		}
+	}
+	
+	
+	
+} /* Media Query */
+
 
 @media screen and (max-width: 767px) {
 	
