--- a/wp-content/themes/dermer/css/scss/_global.scss
+++ b/wp-content/themes/dermer/css/scss/_global.scss
@@ -34,6 +34,11 @@ img.aligncenter {
 
 
 .content {
+	color:$blue;
+	font-size: 16px;
+	line-height: 32px;
+	font-family: $montserrat;
+	font-weight: 400;
 	h2 {
 		color:$bluelight;
 		font-size: 24px;
@@ -43,11 +48,6 @@ img.aligncenter {
 		padding-bottom:9px;
 	}
 	p {
-		color:$blue;
-		font-size: 16px;
-		line-height: 32px;
-		font-family: $montserrat;
-		font-weight: 400;
 		margin-bottom:44px;
 	}
 }
@@ -82,6 +82,15 @@ img.aligncenter {
 }
 	
 	
-	
+	.content {
+		h2 {
+			font-size:22px;
+			line-height: 34px;
+			padding-bottom: 16px;
+		}
+		p {
+			margin-bottom: 29px;
+		}
+	}
 	
 } /* Media Query */
