--- a/wp-content/themes/dermer/css/scss/style.scss
+++ b/wp-content/themes/dermer/css/scss/style.scss
@@ -11,6 +11,7 @@
 				"header",
 				"homepage/section_one",
 				"homepage/section_two",
-				"homepage/section_three";
+				"homepage/section_three",
+				"homepage/section_four";
 
 
