--- a/wp-content/themes/dermer/css/scss/style.scss
+++ b/wp-content/themes/dermer/css/scss/style.scss
@@ -12,6 +12,7 @@
 				"homepage/section_one",
 				"homepage/section_two",
 				"homepage/section_three",
-				"homepage/section_four";
+				"homepage/section_four",
+				"homepage/section_five";
 
 
