--- a/wp-content/themes/dermer/css/scss/style.scss
+++ b/wp-content/themes/dermer/css/scss/style.scss
@@ -13,6 +13,7 @@
 				"homepage/section_two",
 				"homepage/section_three",
 				"homepage/section_four",
-				"homepage/section_five";
+				"homepage/section_five",
+				"homepage/section_six";
 
 
