--- a/wp-content/themes/dermer/css/scss/homepage/section_five.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/section_five.scss
@@ -9,6 +9,8 @@
 	height:500px;
 	flex-basis: 33.333333%;
 	overflow: hidden;
+	padding-left:20px;
+	padding-right:20px;
 	a {
 		display: block;
 		&:hover {
@@ -18,6 +20,7 @@
 			.sec_five_slide_content {
 				span.practice_areas_title {
 					color:$beige;
+					
 				}
 			}
 			span.open_arow {
@@ -86,6 +89,7 @@
 		text-transform: lowercase;
 		color:#fff;
 		display: block;
+		text-align: center;
 		margin-top:25px;
 		transition: all 200ms ease-in-out;
 	}
@@ -125,3 +129,86 @@ a.view_practice_areas_button {
 	}
 }
 
+
+@media screen and (max-width: 1450px) {
+	
+	
+	
+	.sec_five_slide {
+		height: 366px;
+		.sec_five_slide_content {
+			span.practice_areas_title {
+				font-size: 34px;
+				margin-top: 29px;
+			}
+		}
+	}
+	
+	
+	
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 1135px) {
+	
+	
+.sec_five_inner_slider {
+	display: block;
+}
+
+
+.sec_five_slide {
+	height: 298px;
+	a {
+		display: block;
+		&:hover {
+			.sec_five_bg_image {
+				transform: scale(1);
+			}
+			.sec_five_slide_content {
+				span.practice_areas_title {
+					color:#fff;
+				}
+			}
+			span.open_arow {
+				svg {
+					fill:#fff;
+				}
+			}
+		}
+	}
+}
+
+a.view_practice_areas_button {
+	height: 65px;
+	padding: 26px 0 0 0;
+}
+
+
+
+} /* Media Query */
+
+
+
+@media screen and (max-width: 767px) {
+	
+	.sec_five_slide {
+		height: 323px;
+		.sec_five_slide_content  {
+			span.practice_areas_title {
+				font-size:36px;
+			}
+		}
+	}
+	
+	
+	a.view_practice_areas_button {
+		font-size:15px;
+		height: 62px;
+    padding: 23px 0 0 0;
+	}
+	
+	
+	
+} /* Media Query */
