--- a/wp-content/themes/dermer/css/scss/homepage/section_six.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/section_six.scss
@@ -1,5 +1,108 @@
 #section_six {
 	width:100%;
-	height:3000px;
 	background: url(#{$themePath}images/pattern-white.jpg) top left repeat;
+	padding:0 57px 192px;
+}
+
+.sec_six_inner {
+	display: flex;
+	max-width:1685px;
+	margin:0 auto;
+}
+
+
+.sec_six_left {
+	width:58%;
+	margin:310px 0 0;
+}
+
+
+
+.sec_six_slider {
+	background: #fff;
+	width:100%;
+	box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.28);
+	position: relative;
+}
+
+.sec_six_single_slide {
+	padding: 110px 110px 0 15%;
+	height:715px;
+	span.stars_svg {
+		display: block;
+		svg {
+			width:135px;
+			height: 63px;
+		}
+	}
+	span.sec_six_content {
+		color:#172c57;
+		font-family: $playfair;
+		font-size:34px;
+		line-height: 54px;
+		display: block;
+		margin:35px 0 0;
+	}
+	span.sec_six_name {
+		color:$bluelight;
+		font-family: $playfair;
+		font-weight: 700;
+		font-style: italic;
+		font-size:20px;
+		display: block;
+		margin:95px 0 0;
+	}
+}
+
+
+
+
+.sec_six_buttons {
+	width:79px;
+	height:79px;
+	position: absolute;
+	bottom:160px;
+	right:-40px;
+	svg {
+		width:79px;
+		height:79px;
+		.slide_button-cls-1 {
+        fill: #182d56;
+        transition: all 200ms ease-in-out;
+      }
+
+      .slide_button-cls-2 {
+        fill: #fff;
+         transition: all 200ms ease-in-out;
+      }
+	}
+	span.sec_six_button {
+		display: block;
+		cursor: pointer;
+		&:hover {
+			svg {
+				.slide_button-cls-1 {
+					fill:$bluelight;
+				}
+				.slide_button-cls-2 {
+					fill:#fff;
+				}
+			}
+		}
+	}
+	span.right_button {
+		transform: rotate(180deg);
+		margin-top:12px;
+	}
+}
+
+
+
+
+
+
+
+.sec_six_right {
+	width:42%;
+
 }
