--- a/wp-content/themes/dermer/css/scss/homepage/section_six.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/section_six.scss
@@ -26,7 +26,7 @@
 }
 
 .sec_six_single_slide {
-	padding: 110px 110px 0 15%;
+	padding: 110px 110px 0 130px;
 	height:715px;
 	span.stars_svg {
 		display: block;
@@ -150,3 +150,294 @@ a.testi_button {
 		color:#fff;
 	}
 }
+
+
+
+a.testi_button.mobile {
+	display: none;
+}
+
+@media screen and (max-width: 1785px) {
+	
+	
+	.sec_six_single_slide {
+		padding-left:90px;
+		padding-right:90px;
+	}
+	
+	.sec_six_left {
+		 width: 45%;
+	}
+	
+	.sec_six_right {
+		width:55%;
+	}
+	
+	   
+	
+	
+} /* Media Query */
+
+@media screen and (max-width: 1550px) {
+	
+	
+	.sec_six_single_slide {
+		padding-left:45px;
+		padding-right:45px;
+	}
+	
+	
+	
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 1450px) {
+	
+	
+	#section_six {
+		padding: 0 58px 172px;
+	}
+	
+	.sec_six_left {
+    margin: 329px 0 0;
+    width:56%;
+	}
+	
+	
+	.sec_six_single_slide {
+    padding: 79px 73px;
+    height: 590px;
+   }
+	
+	
+	.sec_six_single_slide {
+		padding: 79px 78px;
+		span.sec_six_content {
+			margin: 20px 0 0;
+		}
+		span.sec_six_name {
+			margin: 53px 0 0;
+		}
+		    
+	}
+	
+	
+	.sec_six_right {
+		padding-left: 52px;
+		padding-top: 139px;
+		span.large_header {
+			font-size:70px;
+			line-height: 86px;
+			margin-top: 39px;
+		}
+	}
+	
+	
+	.sec_six_buttons {
+		bottom: 200px;
+	}
+	
+	
+	a.testi_button {
+		margin: 42px 0 0;
+	}
+	
+
+	
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 1330px) {
+	
+	
+	.sec_six_single_slide {
+    padding: 79px 58px 0 38px;
+    height: 670px;
+	}
+	
+	
+	.sec_six_left {
+    width: 49%;
+	}
+	
+	.sec_six_right {
+    width: 51%;
+	}
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 1150px) {
+	
+	
+	#section_six {
+		padding: 0 58px 102px;
+	}
+	
+	.sec_six_inner {
+		flex-direction: column;
+		max-width: 815px;
+	}
+	
+	.sec_six_left {
+    width: 100%;
+    order:2;
+    margin: 71px 0 0;
+	}
+	
+	.sec_six_right {
+    width: 100%;
+    order:1;
+    padding-top: 111px;
+    padding-left:0;
+    span.large_header {
+	    margin-top: 24px;
+	    max-width: 940px;
+    }
+	}
+	
+	
+	.sec_six_single_slide {
+		padding: 79px 70px 0;
+		span.sec_six_content {
+			font-size:28px;
+			line-height: 50px;
+			margin: 63px 0 0;
+			span.stars_svg {
+				svg {
+					width:124px;
+				}
+			}
+		}
+		span.sec_six_name {
+			margin: 65px 0 0;
+		}
+	}
+	
+
+	
+a.testi_button.mobile {
+	display: block;
+}
+
+a.testi_button.desktop {
+	display: none;
+}
+
+
+.sec_six_buttons {
+	width:100%;
+	height:auto;
+	right:auto;
+	left:0;
+	bottom:-39px;
+	display: flex;
+	justify-content: center;
+	svg {
+		
+	}
+	span.left_button {
+		order:2;
+		
+	}
+	span.right_button {
+		margin-top:0;
+		order:1;
+		margin-right:15px;
+	}
+}
+
+
+
+
+.sec_six_button {
+	display: inline-block !important;
+	width:79px;
+	height:79px;
+}
+
+
+a.testi_button.mobile {
+   text-align: center;
+   width:363px;
+   margin: 100px auto 0;
+}
+
+	
+	
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 767px) {
+	
+	
+	#section_six {
+    padding: 0 35px 102px;
+	}
+	
+	
+	.sec_six_left {
+		margin: 52px 0 0;
+	}
+	
+	.sec_six_right {
+		 padding-top: 90px;
+		 span.small_header {
+			  &:before {
+				  display: none;
+			  }
+			  &:after {
+				  content:"";
+					display: block;
+					background: $beige;
+					width:52px;
+					height:5px;
+					vertical-align: top;
+					margin-right:25px;
+					margin-top:32px;
+			  }
+		 }
+		 span.large_header {
+			 font-size:50px;
+			 line-height: 64px;
+		 }
+	}
+	
+	
+	.sec_six_single_slide {
+		text-align: center;
+		height:auto;
+		width:100%;
+		padding: 79px 31px 115px;
+		span.sec_six_content {
+			font-size:24px;
+			margin: 32px 0 0;
+		}
+		span.sec_six_name {
+			margin: 44px 0 0;
+		}
+	}
+	
+	  
+	  
+	a.testi_button.mobile {
+		 margin: 106px 0 0 -35px;
+		 width:100vw;
+		 padding-left:5px;
+		 padding-right:5px;
+	}
+	
+    
+	
+	
+	
+} /* Media Query */
