--- a/wp-content/themes/dermer/css/scss/style.scss
+++ b/wp-content/themes/dermer/css/scss/style.scss
@@ -14,6 +14,7 @@
 				"homepage/section_three",
 				"homepage/section_four",
 				"homepage/section_five",
-				"homepage/section_six";
+				"homepage/section_six",
+				"homepage/section_seven";
 
 
