--- a/wp-content/themes/dermer/css/scss/homepage/section_seven.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/section_seven.scss
@@ -2,6 +2,7 @@
 	background: url(#{$themePath}images/testimonials-bg-1920.jpg) top center;
 	width:100%;
 	height:1180px;
+	padding:0 60px;
 }
 
 
@@ -175,3 +176,203 @@
 }
 
 
+
+@media screen and (max-width: 1450px) {
+	
+	
+	#section_seven {
+		height: 1000px;
+	}
+	
+	
+	.sec_seven_slider {
+    padding: 232px 0 0;
+   }
+   
+   
+   
+   
+   .sec_seven_single_slide {
+	   	padding: 191px 30px 0;
+	   	height: 579px;
+	   	.sec_seven_hover {
+		   	span.sec_seven_content {
+			   	font-size: 22px;
+			   	line-height: 38px;
+			   	max-width: 340px;
+			   	&:before {
+				   	margin: 51px auto 44px;
+			   	}
+		   	}
+		   	span.view_results {
+			   	&:after {
+				   	font-size:15px;
+				   	padding: 25px 48px;
+			   	}
+		   	}
+	   	}
+	   	span.sec_seven_arrow {
+		   	margin-top: 39px;
+	   	}
+	  	span.svg {
+		 		top:70px;
+			}
+			span.amount {
+				font-size:90px;
+			}
+			span.small_header {
+				smargin: 32px auto 0;
+			}
+   	}
+   
+   
+    .sec_seven_single_slide.one {
+   	 	
+		}
+   
+   
+   .sec_seven_single_slide.two {
+   	 	margin-top: -60px;
+		}
+		
+		
+		 .sec_seven_single_slide.three {
+   	 	
+		}
+	
+	
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 1250px) {
+	
+	
+	.sec_seven_single_slide .sec_seven_hover span.sec_seven_content:before {
+    margin: 51px auto 27px;
+}
+	
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 1220px) {
+	
+	
+	
+	#section_seven {
+		background-image: none;
+		background-color: #f5f5f5;
+	}
+	
+	
+	.sec_seven_slider {
+    padding: 97px 0 0;
+	}
+	
+		.sec_seven_single_slide {
+	   	margin:5px 5px 8px;
+	   	padding: 228px 30px 0;
+	   	height: 589px;
+	   	&:hover {
+		   
+	   	}
+	   	span.svg {
+		   	margin-top: 5px;
+	   	}
+	   	.sec_seven_hover {
+		   	opacity: 1;
+		   	visibility: visible;
+		   	background: transparent;
+		   	span.sec_seven_content {
+			   display: none;
+			   	&:before {
+				   
+			   	}
+		   	}
+		   	span.view_results {
+			   	&:hover {
+				   	&:after {
+					   	background:$bluelight;
+					   	color:#fff;
+				   	}
+			   	}
+			   	&:after {
+				   
+			   	}
+		   	}
+	   	}
+	   	span.sec_seven_arrow {
+		   	
+	   	}
+	  	span.svg {
+		 		
+			}
+			span.amount {
+				font-size:100px;
+				&:after {
+					margin: 30px auto 0;
+				}
+			}
+			span.small_header {
+				margin: 42px auto 0;
+			}
+   	}
+	
+	
+	
+	.sec_seven_single_slide.two {
+   	 	margin-top:5px;
+	}
+	
+	
+	.sec_seven_single_slide {
+		 span.sec_seven_arrow {
+			 display: none;
+			 
+		 }
+	}
+
+	
+	.sec_seven_slider {
+		.slick-dots {
+			position: absolute;
+			bottom: -30px;
+			left:0;
+			li.slick-active {
+				button {
+					&:before {
+						color:#fff;
+					}
+				}
+			}
+			li:hover {
+				button {
+					&:before {
+						color:#fff;
+					}
+				}
+			}
+			li {
+				margin:0;
+				width:16px;
+				button {
+					width:16px;
+					&:before {
+						width:16px;
+						opacity: 1;
+						color: red;
+						font-size:20px;
+					}
+				}
+			}
+		}
+	}
+
+	
+	
+} /* Media Query */
