--- a/wp-content/themes/dermer/css/scss/homepage/section_seven.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/section_seven.scss
@@ -343,31 +343,42 @@
 			position: absolute;
 			bottom: -30px;
 			left:0;
+			list-style: none;
 			li.slick-active {
 				button {
+/*
 					&:before {
 						color:#fff;
 					}
+*/
 				}
 			}
 			li:hover {
 				button {
+/*
 					&:before {
 						color:#fff;
 					}
+*/
 				}
 			}
 			li {
 				margin:0;
 				width:16px;
+				list-style: none;
 				button {
 					width:16px;
+					background:$blue;
+				
+					
+/*
 					&:before {
 						width:16px;
 						opacity: 1;
 						color: red;
 						font-size:20px;
 					}
+*/
 				}
 			}
 		}
