--- a/wp-content/themes/dermer/css/scss/style.scss
+++ b/wp-content/themes/dermer/css/scss/style.scss
@@ -15,6 +15,7 @@
 				"homepage/section_four",
 				"homepage/section_five",
 				"homepage/section_six",
-				"homepage/section_seven";
+				"homepage/section_seven",
+				"homepage/section_eight";
 
 
