--- a/wp-content/themes/dermer/css/scss/style.scss
+++ b/wp-content/themes/dermer/css/scss/style.scss
@@ -16,6 +16,7 @@
 				"homepage/section_five",
 				"homepage/section_six",
 				"homepage/section_seven",
-				"homepage/section_eight";
+				"homepage/section_eight",
+				"footer";
 
 
