--- a/wp-content/themes/dermer/css/scss/footer.scss
+++ b/wp-content/themes/dermer/css/scss/footer.scss
@@ -24,7 +24,7 @@ footer {
 
 
 .footer_left_wrapper {
-	width:340px;
+	width:335px;
 	margin:118px auto 0;
 	span.footer_svg {
 		display: block;
@@ -34,30 +34,92 @@ footer {
 			height: 50px;
 		}
 	}
-}
-
-.footer_flex_left {
 	span.small_header {
 		color:$bluelight;
 		font-family: $montserrat;
 		font-weight: 800;
-		text-transform: lowercase;
+		display: block;
 		font-size:24px;
+		margin-bottom:29px;
 	}
+	a {
+		transition: all 200ms ease-in-out;
+		&:hover {
+			color:$bluelight;
+		}
+	}
+}
+
+.footer_flex_left {
+	
 	a,span {
 		color:$blue;
 	}
 	.numbers {
 		display: block;
 		text-decoration: none;
+		font-family: $montserrat;
+		font-size:18px;
+		margin-bottom:25px;
 		span {
 			text-transform: uppercase;
+			font-family: $montserrat;
+			font-weight: 800;
+			display: inline-block;
+			padding-right:10px;
+		}
+	}
+	.address {
+		font-family: $montserrat;
+		font-size:18px;
+		line-height: 32px;
+		text-decoration: none;
+		display: block;
+		padding-top:5px;
+	}
+	a.google_maps {
+		text-transform: uppercase;
+		color:$bluelight;
+		font-family: $montserrat;
+		font-weight: 800;
+		font-size:14px;
+		letter-spacing: 0.2em;
+		text-decoration: none;
+		margin-top:30px;
+		display: inline-block;
+		padding-bottom:9px;
+		border-bottom:4px solid $beige;
+		transition: all 200ms ease-in-out;
+		&:hover {
+			color:$beige;
 		}
 	}
 }
 
 .footer_flex_right {
-	
+	margin-top:80px;
+	span.right {
+		margin-bottom:25px;
+	}
+	ul.social {
+		list-style: none;
+		li {
+			text-transform: uppercase;
+			font-family: $montserrat;
+			font-weight: 800;
+			font-size: 12px;
+			letter-spacing: 0.2em;
+			margin-bottom:30px;
+			a {
+				color:$blue;
+				text-decoration: none;
+				transition: all 200ms ease-in-out;
+				&:hover {
+					color:$bluelight;
+				}
+			}
+		}
+	}
 }
 
 
@@ -65,4 +127,5 @@ footer {
 .footer_right {
 	flex-grow:1;
 	background: url(#{$themePath}images/pattern-blue.jpg) top left repeat;
+	
 }
