--- a/wp-content/themes/dermer/css/scss/footer.scss
+++ b/wp-content/themes/dermer/css/scss/footer.scss
@@ -290,6 +290,52 @@ footer {
 	}
 }
 
+  .copyright {
+	   background: #112243;
+	   height:90px;
+	   width:100%;
+	   display: flex;
+	   justify-content: space-between;
+		 align-items: center;
+		 padding-left:70px;
+		 padding-right:95px;
+	   ul {
+		 //width:50%;
+		   li {
+			   color:#fff;
+			   font-family: $montserrat;
+			   font-weight:700;
+			   display: inline-block;
+			   text-transform: uppercase;
+			   font-size:12px;
+			   letter-spacing: 0.1em;
+			   margin-right:5px;
+			   &:after {
+				   content:"|";
+				   display: inline-block;
+				   margin-left:7px;
+				 }
+				 &:last-of-type {
+					 &:after {
+						 content:"";
+					 }
+				 }
+			  a {
+				  color:#fff;
+				  text-decoration: none;
+				  transition: all 200ms ease-in-out;
+				  &:hover {
+					  color:$bluelight;
+				  }
+			  }
+		   }
+	   }
+	   a.ilawyer {
+		   width:240px;
+		   height: 20px;
+	   }
+   }
+
 
 @media screen and (max-width: 1450px) {
 	
@@ -312,6 +358,19 @@ footer {
  .footer_right_inner {
    padding: 121px 0 118px;
 	}
+	
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 1250px) {
+	
+	
+	.copyright {
+		padding-left: 30px;
+		padding-right: 30px;
+	}
+	
 	
 	
 } /* Media Query */
@@ -399,6 +458,109 @@ footer {
    }
    
 
+	
+	
+	.copyright {
+		height:auto;
+		flex-direction: column;
+		padding:32px 35px 25px;
+		ul {
+			//width:100%;
+		}
+		a.ilawyer {
+			margin-top:18px;
+		}
+	}
+	
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 767px) {
+	
+	
+	
+	.footer_right_inner {
+    padding: 81px 0 104px;
+    span.free_case_excerpt {
+	    margin: 23px auto 0;
+		}
+		span.required {
+			margin-top: 20px;
+		}
+	}
+	
+	footer {
+		.form {
+			margin: 53px auto 0;
+			max-width:600px;
+			ul {
+				display: block;
+				li {
+					input {
+						padding: 24px 27px;
+					}
+					textarea {
+						height:164px;
+					}
+				}
+			}
+			input[type="submit"] {
+				margin-top: 2px;
+				padding-left:0;
+				padding-right:0;
+				width:100%;
+			}
+		}
+	}
+	
+
+	
+	.footer_right {
+		padding-left: 34px;
+		padding-right:34px;
+	}
+	
+	
+	.footer_left {
+		padding: 0 38px 59px;
+		span.large_header {
+			font-size:70px;
+			line-height: 78px;
+		}
+	}
+	
+	
+	.footer_left_wrapper {
+    margin: 74px 0 0;
+   }
+   
+   .footer_left_col {
+	   display: block;
+	   .footer_flex_right {
+		   span.right {
+			   margin-top:55px;
+			   margin-bottom: 21px;
+				}
+	   }
+   }
+   
+   .copyright {
+	   padding: 27px 5px 25px;
+	   text-align: center;
+	   ul {
+		   li {
+			   font-size:10px;
+			   &:after {
+				   content:"";
+			   }
+			   &:last-of-type {
+				   display: none;
+			   }
+		   }
+	   }
+   }
+ 
 	
 	
 } /* Media Query */
