--- a/wp-content/themes/dermer/css/scss/footer.scss
+++ b/wp-content/themes/dermer/css/scss/footer.scss
@@ -280,7 +280,7 @@ footer {
 		display: none;
 	}
 	.gfield_description, .validation_message {
-		color:#fff;
+		color:$bluelight;
 		text-align: left;
 		text-transform: lowercase;
 		font-family: $montserrat;
