--- a/wp-content/themes/dermer/css/scss/style.scss
+++ b/wp-content/themes/dermer/css/scss/style.scss
@@ -1,6 +1,6 @@
 /*! Css Main Stylesheet isn't meant to update, please use the scss partials in /css/scss */
-/*! Theme Name: Starter
-		Author: Dermer */
+/*! Theme Name: Dermer Appel Ruder
+		Author: Garrett Cullen */
 
 
 
@@ -9,6 +9,7 @@
 				"global",
 				"slick",
 				"header",
+				"nav",
 				"homepage/section_one",
 				"homepage/section_two",
 				"homepage/section_three",
