--- a/wp-content/themes/dermer/css/scss/_nav.scss
+++ b/wp-content/themes/dermer/css/scss/_nav.scss
@@ -6,26 +6,36 @@ nav {
 	left:0;
 	z-index:10;
 	display: flex;
+	opacity: 0;
+	visibility: hidden;
 	.close {
 		position: absolute;
 		top:32px;
 		right:32px;
-		width:55px;
-		height:55px;
-		background: red;
+		width:60px;
+		height:60px;
+		cursor: pointer;
+		opacity: 0;
+		visibility: hidden;
+		z-index: 1;
+		transition: all 400ms ease-in-out;
 		&:before {
 			content:"";
 			width:100%;
-			height:4px;
+			height:5px;
 			display: block;
 			background: $blue;
+			transform: rotate(-45deg);
+			transform-origin: 63px 16px 0;
 		}
 		&:after {
 			content:"";
 			width:100%;
-			height:4px;
+			height:5px;
 			display: block;
 			background: $blue;
+			transform: rotate(45deg);
+		  transform-origin: 2px 13px 0;
 		}
 	}
 }
@@ -100,6 +110,7 @@ nav {
 					left:230px;
 				}
 			}
+			
 			li {
 				margin-bottom:16px;
 				position: relative;
@@ -193,6 +204,7 @@ nav {
 	background: #fff;
 	flex-grow: 1;
 	display: flex;
+	overflow-y: scroll;
 }
 
 
@@ -205,6 +217,11 @@ nav {
 	ul {
 		list-style: none;
 		margin:0;
+		li.current-menu-item {
+			a {
+					color:$bluelight;
+			}
+		}
 		li {
 			a {
 				color:$blue;
@@ -234,7 +251,18 @@ nav {
 				}
 			}
 		}
-		li.menu-item-has-children {
+/*
+		li.current-menu-ancestor {
+			a {
+				color:$bluelight;
+			}
+		}
+*/
+		
+		li.current-menu-ancestor, li.menu-item-has-children {
+			a.active {
+				color:$bluelight;
+			}
 			a {
 				&:after {
 					content:"";
@@ -254,8 +282,14 @@ nav {
 
 
 .nav_col_two {
+	ul.fadein {
+		opacity: 1;
+
+	}
 	ul {
 		margin-left:-90px;
+		transition: all 200ms ease-in-out;
+		opacity: 0;
 		li {
 			text-transform: uppercase;
 			font-size:14px;
@@ -272,4 +306,48 @@ nav {
 			}
 		}
 	}
+}
+
+
+// open
+
+
+nav.open {
+	opacity: 1;
+	visibility: visible;
+	.nav_left, .nav_right {
+		transform: translateX(0);
+	}
+	.close {
+		opacity: 1;
+		visibility: visible;
+		transition-delay: 100ms;
+	}
+}
+
+.nav_left {
+	transform: translateX(-100%);
+	transition: all 700ms cubic-bezier(.17,.66,.34,.98);
+}
+
+.nav_right {
+	transform: translateX(100%);
+	transition: all 700ms cubic-bezier(.17,.66,.34,.98);
+}
+
+
+nav.close_nav {
+	.close {
+		opacity: 0;
+		visibility: hidden;
+	}
+	.nav_left {
+	transform: translateX(-100%);
+	transition: all 700ms cubic-bezier(.17,.66,.34,.98);
+}
+
+.nav_right {
+	transform: translateX(100%);
+	transition: all 700ms cubic-bezier(.17,.66,.34,.98);
+}
 }
