--- a/wp-content/themes/dermer/css/scss/_nav.scss
+++ b/wp-content/themes/dermer/css/scss/_nav.scss
@@ -444,7 +444,9 @@ nav.close_nav {
 	
 	.nav_right {
 		display: block;
+		transform: translate(0,-100%);
 	}
+	
 	
 	.nav_col {
 		width:100%;
@@ -452,6 +454,8 @@ nav.close_nav {
 		position: absolute;
 		top:0;
 		left:0;
+		display: block;
+		
 	}
 	
 	
@@ -461,6 +465,7 @@ nav.close_nav {
 		transition: all 200ms ease-in-out;
 		opacity: 1;
 		visibility: visible;
+		padding-top:130px;
 		ul {
 			li {
 				position: relative;
@@ -495,8 +500,12 @@ nav.close_nav {
 	.nav_col_two {
 		opacity: 0;
 		visibility: hidden;
+		padding-top:170px;
 		ul {
 			margin-left:0;
+			li {
+				margin-bottom: 25px;
+			}
 		}
 	}
 	
@@ -504,6 +513,66 @@ nav.close_nav {
 	.nav_col_two.fadein {
 		opacity: 1;
 		visibility: visible;
+	}
+	
+	
+	nav.open {
+		.nav_right {
+			
+		}
+	}
+	
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 767px) {
+	
+	nav {
+		.close {
+			width:35px;
+			height:35px;
+			&:before {
+				height:4px;
+				transform-origin: 41px 7px 0;
+			}
+			&:after {
+				height:4px;
+			}
+		}
+		.back_wrapper {
+			left: 25px;
+			span.back_title {
+				font-size:24px;
+				margin-left: 13px;
+			}
+			span.back_arrow {
+				position: relative;
+				top:2px;
+				svg {
+					width:15px;
+					height:18px;
+				}
+			}
+		}
+	}
+	
+	.nav_col_one {
+		padding-top: 84px;
+		ul {
+			li {
+				font-size:24px;
+				margin-bottom: 31px;
+				a {
+					
+				}
+			}
+		}
+	}
+	
+	
+	.nav_col_two {
+		padding-top: 124px;
 	}
 	
 	
