--- a/wp-content/themes/dermer/css/scss/header.scss
+++ b/wp-content/themes/dermer/css/scss/header.scss
@@ -233,6 +233,7 @@ header {
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		cursor: pointer;
 		span.mobile_menu_title {
 			color:#fff;
 			text-transform: uppercase;
